# sdl2_experiments

./: .gitignore  README.md  main.cpp  meson.build
src/: background.cpp  background.h  common.h  entity.cpp  entity.h  event_dispatcher.cpp  event_dispatcher.h  event_observer.h  game.cpp  game.h  object.h  player.cpp  player.h  player_action.cpp  player_action.h  scene.cpp  scene.h  texture.cpp  texture.h
subprojects/: jsoncpp.wrap
