project('tutorial', 'cpp')
sdl_dependencies = [dependency('sdl2'), dependency('sdl2_image')]
executable('sdl_demo', 'main.cpp', 'src/scene.cpp', 'src/game.cpp', 'src/entity.cpp',  'src/texture.cpp', 'src/background.cpp' ,'src/event_dispatcher.cpp','src/player.cpp', 'src/player_action.cpp',   dependencies : sdl_dependencies)